カテゴリ生成の修正